# rg-opendal

./: Cargo.toml  LICENSE-MIT  MATRIX.md  README.md
benchmarks/seam-a/: Cargo.toml  README.md
benchmarks/seam-a/src/: main.rs  reader.rs
scripts/: harness-ff10-ff11-ff12-ff13.sh  harness-ff2-glob-type.sh  harness-ff2-streaming.sh  harness-ff3-json-stats.sh  harness-ff4-color.sh  harness-ff5-count-files.sh  harness-ff6-word-line.sh  harness-ff7-ff8-ff9.sh
src/: cli.rs  lib.rs  main.rs  opendal_io.rs  printer.rs  walker.rs
