[package]
name = "seam-a-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seam-a-bench"
path = "src/main.rs"

[dependencies]
grep-searcher = "0.1.16"
grep-regex = "0.1.14"
grep-matcher = "0.1.8"
opendal = { version = "0.53", features = ["services-s3"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
